- rotate some of the tool icons to reduce height of toolbox?

MIGRATE TO PHETCOMMON:
- DoubleSpinner
- SliderOnlyLayoutStrategy
- HorizontalLayoutStrategy

CLEANUP:
- setPickable(false) on non-interactive nodes
- rescale image files to minimize file size
- disable all debug output
- optimize memory management by reusing mutable objects


DONE:
3/5/08 - add elevation axes on left and right edges of zoomed viewport
3/5/08 - wire up axes visibility to "coordinates" checkbox
3/5/08 - create vertical (elevation) coordinate axis, dynamically align with right edge of viewport
3/5/08 - make Reset All delete all tools
3/5/08 - tools don't need time information, remove knowledge of clock from tools' base class
3/5/08 - refactor common code for sub-panels of main control panel into a base class
3/5/08 - reduce vertical spacing in Climate control panel
3/5/08 - connect clock speed control to frame rate instead of dt, vary from 1 to 24 fps, use constant dt=1 year
3/5/08 - use fixed ranges for axes on graphs that involve elevation
3/5/08 - temporary fix for condition in ice thickness model that results in negative glacier length
3/5/08 - bugfix in GlacierNode, handle empty or null iceThickessSamples
******** 0.00.10 (20106)
3/3/08 - add Glacier.getLength
3/3/08 - change climate control ranges and defaults
3/3/08 - implement new ice thickness model (based on ELA interpolation)
3/3/08 - put temperate at top of climate control panel, it's the easiest to understand
3/3/08 - clean up climate ranges
2/29/08 - reset clock speed control when clock dt changes
2/29/08 - implement Reset All
2/29/08 - make thermometer display temperature in both C and F units
2/28/08 - turn off autoSort for time-related charts for performance reasons; sorted dataset will be provided
2/28/08 - bugfix: turn off autoSort for elevation-related graphs
2/28/08 - combine accumulation, ablation and glacial budget into 1 graph; delete individual graphs
2/28/08 - rename "ice flow" checkbox to "ice flow vectors"