@@ -93,4 +93,5 @@ public class GlaciersConstants {
     // Coordinate axes
     public static final DoubleRange ELEVATION_AXIS_RANGE = new DoubleRange( 0, 7000 ); // meters
     public static final double ELEVATION_AXIS_TICK_SPACING = 500; // meters
+    public static final double DISTANCE_AXIS_TICK_SPACING = 1000; // meters
 }
