@@ -37,7 +37,7 @@ public class ValleyNode extends PComposite {
         
         TexturePaint paint = new TexturePaint( GlaciersImages.DIRT_TEXTURE, new Rectangle2D.Double( 0, 0, 100, 100 ) );
         
-        GeneralPath path = createValleyFloorPath( valley, mvt, minX, maxX, DX );
+        GeneralPath path = createValleyCrossSection( valley, mvt, minX, maxX, DX );
         PPath pathNode = new PPath( path );
         pathNode.setStroke( null );
         pathNode.setPaint( paint );
@@ -47,7 +47,7 @@ public class ValleyNode extends PComposite {
     public void cleanup() {}
     
     /*
-     * Creates a path that follows the contour of the valley floor.
+     * Creates a path that represents a 2D cross section of the valley floor.
      * The parameters are specified in model coordinates.
      * The returned path is in view coordinates.
      * 
@@ -56,33 +56,18 @@ public class ValleyNode extends PComposite {
      * @param dx interval between x samples (meters)
      * @return GeneralPath path in view coordinates
      */
-    private static GeneralPath createValleyFloorPath( Valley valley, ModelViewTransform mvt, final double minX, final double maxX, final double dx ) {
+    private static GeneralPath createValleyCrossSection( Valley valley, ModelViewTransform mvt, final double minX, final double maxX, final double dx ) {
         
         assert( minX < maxX );
         assert( dx > 0 );
         
-        GeneralPath path = new GeneralPath();
+        GeneralPath path = createValleyFloorPath( valley, mvt, minX, maxX, dx );
+        
         Point2D pModel = new Point2D.Double();
         Point2D pView = new Point2D.Double();
-        double x = minX;
-        double elevation = 0;
-        
-        // approximate the valley floor, from left to right
-        while ( x <= maxX ) {
-            elevation = valley.getElevation( x );
-            pModel.setLocation( x, elevation );
-            pView = mvt.modelToView( pModel, pView );
-            if ( x == minX ) {
-                path.moveTo( (float) pView.getX(), (float) pView.getY() );
-            }
-            else {
-                path.lineTo( (float) pView.getX(), (float) pView.getY() );
-            }
-            x += dx;
-        }
         
         // vertical line down to sea level at x=end
-        pModel.setLocation( x - dx, 0 );
+        pModel.setLocation( maxX, 0 );
         pView = mvt.modelToView( pModel, pView );
         path.lineTo( (float) pView.getX(), (float) pView.getY() );
         
@@ -95,5 +80,40 @@ public class ValleyNode extends PComposite {
         path.closePath();
         
         return path;
+    }
+    
+    /**
+     * Creates a path that approximates the valley floor, from left to right.
+     * 
+     * @param valley
+     * @param mvt
+     * @param minX
+     * @param maxX
+     * @param dx
+     * @return GeneralPath
+     */
+    public static GeneralPath createValleyFloorPath( Valley valley, ModelViewTransform mvt, double minX, double maxX, double dx ) {
+        GeneralPath path = new GeneralPath();
+        double elevation = 0;
+        Point2D pModel = new Point2D.Double();
+        Point2D pView = new Point2D.Double();
+        double x = minX;
+        while ( x <= maxX ) {
+            elevation = valley.getElevation( x );
+            pModel.setLocation( x, elevation );
+            pView = mvt.modelToView( pModel, pView );
+            if ( x == minX ) {
+                path.moveTo( (float) pView.getX(), (float) pView.getY() );
+            }
+            else {
+                path.lineTo( (float) pView.getX(), (float) pView.getY() );
+            }
+            x += dx;
+        }
+        return path;
+    }
+    
+    public static GeneralPath createValleyFloorPath( Valley valley, ModelViewTransform mvt, double minX, double maxX ) {
+        return createValleyFloorPath( valley, mvt, minX, maxX, DX );
     }
 }
