@@ -63,6 +63,8 @@ CLEANUP:
 
 
 DONE:
+3/5/08 - add horizontal (distance) coordinate axis, dynamically rebuilt as zoomed viewport changes
+3/5/08 - add public method ValleyNode.createValleyFloorPath, for use by DistanceAxisNode
 3/5/08 - add elevation axes on left and right edges of zoomed viewport
 3/5/08 - wire up axes visibility to "coordinates" checkbox
 3/5/08 - create vertical (elevation) coordinate axis, dynamically align with right edge of viewport
